# unit-testing-101

./: .gitignore  LICENSE  README.md  pyproject.toml
pt1/: preview.md
pt1/ch01/: ch01.md
pt1/ch01/test/: test_01.py  test_02.py  test_03_1.py  test_04.py
pt1/ch02/: ch02.md
pt1/ch02/test/: test_01_classical_way.py  test_01_london_school_way.py
pt1/ch03/: ch03.md
pt1/ch03/test/: test_01_aaa_tutorial.py  test_02_bad.py  test_02_good.py  test_03_high_coupling.py  test_04_using_fixture.py  test_05_complex_name.py  test_06-1_parameterized_test.py  test_06-2_parameterized_test_with_error.py
pt2/: preview.md
pt2/ch04/: ch04.md
pt2/ch04/test/: conftest.py  test_01_html_message.py  test_02_sql_query.py
pt2/ch04/tips/: timeit_forloop_and_generator.py
pt2/ch05/: ch05.md
pt2/ch05/test/: test_01_create_mock_using_mock_library.py
